# tailscale-discloud

./: .gitignore  Cargo.toml  DISCLOUD.md  DISCLOUD.pt-BR.md  Dockerfile  README.md  README.pt-BR.md  discloud.config  mise.toml  start.sh
.github/workflows/: release.yml
public/: app.js  index.html  style.css  suggestions.json
public/i18n/: de.json  en.json  es.json  fr.json  index.json  ja.json  pt-BR.json
src/: main.rs  models.rs  routes.rs  state.rs
