[package]
name = "tailscale-tunnel-manager"
version = "0.1.2"
edition = "2021"
description = "TCP tunnel manager via socat for Tailscale containers"
license = "GPL-2.0-only"
repository = "https://github.com/jackskelt/tailscale-discloud"
homepage = "https://github.com/jackskelt/tailscale-discloud"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
